trino/overlays/prod/hive-metastore-dc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hive-metastore
spec:
  template:
    spec:
      containers:
      - name: metastore
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8082
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
