trino/overlays/prod/trino-secure-route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    labels:
        app.kubernetes.io/instance: dh-prod-trino
        component.opendatahub.io/name: trino
        instance: trino
        opendatahub.io/component: "true"
        role: trino-coordinator
    name: trino-secure
spec:
    host: trino.datahub.redhat.com
    to:
        kind: Service
        name: trino-service
    tls:
        termination: ENC[AES256_GCM,data:5IEGNg==,iv:ELXjwnKvC5pEAjHzD9RVnUU48dhUCdWZdtKC0OwtB6E=,tag:djxo0BnSiS8w3f3fMf/n0g==,type:str]
        insecureEdgeTerminationPolicy: ENC[AES256_GCM,data:AR3UvD++cJ0=,iv:I8LeeoJNg7Pr6g3/PSIjFUgApQrVx02YLUPkP8C7I5Q=,tag:7TEtWvMwN3ZVMioEc37CRg==,type:str]
        key: ENC[AES256_GCM,data:RVmKyQVp3f8UMFiULptf4CGkMWeCWvfejScz4cD3JDZTmljVBbsKT+ZtGaa6RcYwSfly+Ifc1a//IPtFnaQqfeqp/9JatVAxtnK78LYUHMsvB3ROvIYh1bBA1WdE+9GVr7p3Q3hbfCpL4mA7KvDRtPGBbHOCs/FyRqjmluHmF6IjwUv/Z4fB4gb2l8NrkX/OgnZ7WL15m6ItV6KzY4uM7XtPwh8coZRq2vVz20TpuiKYmlB1vmD2lVnFQDwaHsYzbQuzFgDGXD4FwgQeUzveB7DdYk4bXI1ST8oia1EGm7YlisWgjVop7lP+0s6IITKLAuHZ1QSjrHPtw5Bki4XHA8w9OnBaC23bAunYmnDnSK9nKI1Uygzv7I141+Ur6PCpYNo4QQCOhuy9/Q46r6Q5LZykXu8TAWkSITtmaK342qrAcoaIIxF4CLUtNRQ2snaxIU8RWxCbL8Up2QD/JIw [...]
        certificate: ENC[AES256_GCM,data:8tFC+aAD+91/fv14/Q5n+2sRLCtlPsswz6HE8yN+LFjEuTQxBrYx82gmRiPCH+ZG//OvijnWQdsKooxEs3siqyCzBBMwbdH7kpSaNBfIJ3Dno6jfND7A70sZDiKFdPSKVF9LLlP3gcGnMnVWTjcrgOQCqdjXfJGTKmnkYzY0brLJUKLzezclLcRHSEBHhLtAIRkSWAmcHqvkOGtC8PYJ2ZzL2R6KQcqXkBNEMO43tJHdL/ChTzohkncyBypfgPuoebpbmyQtZAMZplZS0XwdEYdnzyZKFiuIxWe5QkdMT2qGpC8RoX+vhqR9JxntAq/VZNcCuDuiu0xCwGDjxSbx9bpPefB1lhUaPrOsx7QRSCjLDmxU+g2iBXWenn+I/UByGvIioaaS58TPmB9YJilXwXVITqQo6wNdW+LYjrU7NQqxSNLlN0vhI/BmvyoWGZ8tx5xQJkWTJs2 [...]
        caCertificate: ENC[AES256_GCM,data:r6YjyjlQdgtue0o9tegaAalazQWT9EOQWuPZWvvghX/2+Bk1rGtgCPybSBhoCst3X7jfHaprMUIQ63vziYl/8MYHl4k89DMgqGODgUd0pammBKx/OVqQ29ThqWj2Sa9XpFrUNfpuJk7ON3tmac48l/96XcnEwz9xoLZdtssksVPlW5Ptol9Jewsz2kjbaKfTxQN0vhWdoAyn/Q0DygQzkFHuKfiXjqhRcBjweNckpNDQFS2J8+dEt+yNzgMMDZ1dP5uMvcjvYnSqS0e33wqg3H+GIAnBXW+j8kk6uyOuo5Q9aIykkFDkCSNCKc6m2SCjdVxVic2EXwsHrN+EGsPOrn/8FpL9VhQeW5V+XWlFHInch9djzGUQODdva0AIYCs+nzuzfrubGU/uKEOPVTSDvnRSo5VNFvNByKKl7ARpPyOywROp7TJFEfOfqwlWQNG2OveqpYZ2l [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2021-05-19T12:41:29Z'
    mac: ENC[AES256_GCM,data:UcF+6qP1YRsKoFjPHdU/f+lHkOcXrr11TGTCx4jaAeZ2kxVxnPK/8uq7oHSsZhWHMdTFk9yt+JbkJCQavixxrt/ks4raZ23W2yHY6NNXPKpGrjYPON+gasjS3xP8QprPwK0QvXCyknDyfqIsEVFkhN+RmSZQXppvLiKQkAasxOo=,iv:+24poqlGAu4a32nrf5wiAh3Y/V5R/yHl2wEKVXdJaVs=,tag:TiX1b9Ue6OgRFhhGdT4wfA==,type:str]
    pgp:
    -   created_at: '2021-05-19T12:41:27Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAiD2EFAN4VJuQniDdBoUfFfVBOOP0xtD7wJOGcfnSJQVe
[...]
            tvY32uOnDFMFLXQi4ZEIy9tQsvkjYaVukZzZJP0=
            =AuLV
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.6.1
